[package]
name = "wasm_on_ray"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
tokio = "1.26.0"
clap = "4.1.11"
lazy_static = "1.4.0"
prost = "0.11"
prost-types = "0.11"
prost-build = "0.11"
tracing = "0.1.37"
serde = "1.0.147"
serde_json = "1.0.89"
uuid = "1.3.0"
tracing-subscriber = "0.3.16"
wasmtime = "6.0.0"
wasmtime-wasi = "6.0.0"

[[bin]]
name = "wasm_worker"
path = "src/cmd/wasm_worker.rs"
