[package]
name = "wasm_on_ray"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
tokio = {version = "1.26.0", features = ["full"]}
clap = {version = "4.1.11", features = ["derive"]}
lazy_static = "1.4.0"
prost = "0.11"
prost-types = "0.11"
prost-build = "0.11"
tracing = "0.1.37"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
uuid = {version = "1.3.0", features = ["v4"]}
tracing-subscriber = "0.3.16"
wasmtime = {version = "7.0.0", features = ["cranelift"]}
wasmtime-wasi = "7.0.0"
wasi-common = "7.0.0"
wasmedge-sdk = "0.8.1"
wasmedge-sys = "0.13.1"
wasmedge-types = "0.4.1"
wasmedge-macro = "0.3.0"
libc = "0.2.141"
rmp = "0.8.11"
sha256 = "1.1.3"

[[bin]]
name = "wasm_worker"
path = "src/cmd/wasm_worker.rs"
