load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")

py_library(
    name = "depsets_lib",
    srcs = [
        "src/dependencies/cli.py",
        "src/__init__.py",
        "src/dependencies/depset.py",
        "src/dependencies/__init__.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ci_require("click"),
    ],
)

py_binary(
    name = "depsets",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":depsets_lib"],
    visibility = ["//visibility:public"],
    exec_compatible_with = ["//:hermetic_python"],
)