load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")

py_library(
    name = "depsets_lib",
    srcs = [
        "src/dependencies/cli.py",
        "src/dependencies/config.py",
        "src/dependencies/depset.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ci_require("click"),
        ci_require("pyyaml"),
    ],
)

py_binary(
    name = "depsets",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":depsets_lib"],
    visibility = ["//visibility:public"],
    exec_compatible_with = ["//:hermetic_python"],
)