load("@rules_python//python:defs.bzl", "py_test")
load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")

py_test(
    name = "test_conditional_testing",
    size = "small",
    srcs = ["test_conditional_testing.py"],
    data = [
        ":determine_tests_to_run.py",
    ],
    exec_compatible_with = ["//:hermetic_python"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ci_require("bazel-runfiles"),
        ci_require("pytest"),
    ],
)
