load("@py_deps_buildkite//:requirements.bzl", ci_require = "requirement")
load("@rules_python//python:defs.bzl", "py_test")

py_library(
    name = "determine_tests_to_run",
    srcs = ["determine_tests_to_run.py"],
)

py_test(
    name = "test_conditional_testing",
    size = "small",
    srcs = ["test_conditional_testing.py"],
    data = [
        ":determine_tests_to_run.py",
        ":test_rules.txt",
    ],
    exec_compatible_with = ["//:hermetic_python"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":determine_tests_to_run",
        ci_require("bazel-runfiles"),
        ci_require("pytest"),
        ci_require("pyyaml"),
    ],
)
