load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@py_deps_ray_ci//:requirements.bzl", ci_require = "requirement")

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    tags = [
        "team:ci",
    ],
    visibility = ["//visibility:private"],
)

py_library(
    name = "ray_ci_lib",
    srcs = glob(
        ["*.py"],
        exclude = [
            "test_*.py",
            "test_in_docker.py",
            "build_in_docker.py",
        ],
    ),
    visibility = ["//visibility:private"],
    deps = [
        ci_require("pyyaml"),
        ci_require("click"),
    ],
)

py_library(
    name = "ray_ci_lib_test",
    srcs = ["test_base.py"],
    visibility = ["//visibility:private"],
)

py_binary(
    name = "test_in_docker",
    srcs = ["test_in_docker.py"],
    deps = [":ray_ci_lib"],
)

py_binary(
    name = "build_in_docker",
    srcs = ["build_in_docker.py"],
    deps = [":ray_ci_lib"],
)

py_test(
    name = "test_linux_container",
    size = "small",
    srcs = ["test_linux_container.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)

py_test(
    name = "test_windows_container",
    size = "small",
    srcs = ["test_windows_container.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)

py_test(
    name = "test_tester",
    size = "small",
    srcs = ["test_tester.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)


py_test(
    name = "test_utils",
    size = "small",
    srcs = ["test_utils.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)

py_test(
    name = "test_builder_container",
    size = "small",
    srcs = ["test_builder_container.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)

py_test(
    name = "test_tester_container",
    size = "small",
    srcs = ["test_tester_container.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)

py_test(
    name = "test_ray_docker_container",
    size = "small",
    srcs = ["test_ray_docker_container.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)

py_test(
    name = "test_anyscale_docker_container",
    size = "small",
    srcs = ["test_anyscale_docker_container.py"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)

py_test(
    name = "test_bazel_sharding",
    size = "small",
    srcs = ["test_bazel_sharding.py"],
    data = ["mock_BUILD"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ":ray_ci_lib",
        ":ray_ci_lib_test",
        ci_require("pytest"),
    ],
)
