load("@py_deps_py310//:requirements.bzl", ci_require = "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "workspace",
    srcs = ["workspace.py"],
    deps = [
        ci_require("pyyaml"),
    ],
)

py_library(
    name = "models",
    srcs = ["models.py"],
)

py_library(
    name = "parser",
    srcs = ["parser.py"],
    deps = [":models"],
)

py_library(
    name = "dependency_graph",
    srcs = ["dependency_graph.py"],
    deps = [
        ":models",
    ],
)

py_library(
    name = "raydepsets_lib",
    srcs = [
        "cli.py",
    ],
    data = ["//:uv_file"],
    deps = [
        ":dependency_graph",
        ":parser",
        ":workspace",
        ci_require("bazel-runfiles"),
        ci_require("click"),
        ci_require("pyyaml"),
        ci_require("networkx"),
    ],
)

py_binary(
    name = "raydepsets",
    srcs = ["raydepsets.py"],
    exec_compatible_with = ["//bazel:py3"],
    deps = [":raydepsets_lib"],
)

py_test(
    name = "test_cli",
    srcs = ["tests/test_cli.py"],
    data = [
        "tests/test_data/pre-hook-error-test.sh",
        "tests/test_data/pre-hook-test.sh",
        "tests/test_data/requirement_constraints_test.txt",
        "tests/test_data/requirements_compiled_test.txt",
        "tests/test_data/requirements_compiled_test_expand.txt",
        "tests/test_data/requirements_compiled_test_update.txt",
        "tests/test_data/requirements_test.txt",
        "tests/test_data/test.depsets.yaml",
        "tests/test_data/test2.depsets.yaml",
        "tests/test_data/test_python_depset.lock",
    ],
    exec_compatible_with = ["//bazel:py3"],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ci_require("pytest"),
        ":raydepsets_lib",
        ":utils",
    ],
)

py_library(
    name = "utils",
    testonly = True,
    srcs = ["tests/utils.py"],
    deps = [
        ci_require("bazel-runfiles"),
    ],
)

py_test(
    name = "test_workspace",
    srcs = ["tests/test_workspace.py"],
    data = [
        "tests/test_data/test.depsets.yaml",
        "tests/test_data/test2.depsets.yaml",
    ],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ci_require("pytest"),
        ":utils",
        ":workspace",
    ],
)

py_test(
    name = "test_parser",
    srcs = ["tests/test_parser.py"],
    data = [
        "tests/test_data/test_python_depset.lock",
    ],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ci_require("pytest"),
        ":parser",
        ":utils",
        ":workspace",
    ],
)

py_test(
    name = "test_dependency_graph",
    srcs = ["tests/test_dependency_graph.py"],
    data = [
    ],
    tags = [
        "ci_unit",
        "team:ci",
    ],
    deps = [
        ci_require("pytest"),
        ":dependency_graph",
        ":utils",
        ci_require("networkx"),
    ],
)
